Couple of fixes

--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -112,7 +112,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Create RPM
         run: |
-          cp -r install/linux/rpm/rpmbuild ~/rpmbuild
+          cp -r install/linux/rpm/rpmbuild ~/
           tar -czvf ~/rpmbuild/SOURCES/SerialLoops-$SLVersion.tar.gz --transform 's,^\.\/,SerialLoops-$SLVersion/,' .
           sed -i "s/#VERSION#/$SLVersion/g" ~/rpmbuild/SPECS/SerialLoops.spec
           dnf install -y rpmdevtools rpmlint dotnet-sdk-8.0
