--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -356,46 +356,46 @@ stages:
         Move-Item -Path $(Build.ArtifactStagingDirectory)/Windows-v$(Version)/publish.zip -Destination $(Build.ArtifactStagingDirectory)/SerialLoops-windows-x64-v$(Version).zip
         Move-Item -Path $(Build.ArtifactStagingDirectory)/Windows-v$(Version)-installer/SerialLoopsInstaller.exe -Destination $(Build.ArtifactStagingDirectory)/SerialLoops-windows-x64-v$(Version).exe
       displayName: Move and rename artifacts
-    # - task: GitHubRelease@1
-    #   displayName: 'Create GitHub Pre-Release'
-    #   inputs:
-    #     gitHubConnection: 'GitHub Connection (Jonko)'
-    #     tagSource: userSpecifiedTag
-    #     tag: '$(Version)'
-    #     title: 'Serial Loops v$(Version)'
-    #     releaseNotesSource: inline
-    #     releaseNotesInline: |
-    #       ${{ parameters.releaseNotes }}
+    - task: GitHubRelease@1
+      displayName: 'Create GitHub Pre-Release'
+      inputs:
+        gitHubConnection: 'GitHub Connection (Jonko)'
+        tagSource: userSpecifiedTag
+        tag: '$(Version)'
+        title: 'Serial Loops v$(Version)'
+        releaseNotesSource: inline
+        releaseNotesInline: |
+          ${{ parameters.releaseNotes }}
 
-    #       ## Installation Notes
-    #       Please ensure you have installed [devkitARM from devkitPro](https://devkitpro.org/wiki/Getting_Started) before using the program. Select the NDS Development workload when installing to do this.
+          ## Installation Notes
+          Please ensure you have installed [devkitARM from devkitPro](https://devkitpro.org/wiki/Getting_Started) before using the program. Select the NDS Development workload when installing to do this.
 
-    #       Additionally, to test the game you will need to have a Nintendo DS emulator installed. We recommend [melonDS](https://melonds.kuribo64.net/) for its accuracy.
+          Additionally, to test the game you will need to have a Nintendo DS emulator installed. We recommend [melonDS](https://melonds.kuribo64.net/) for its accuracy.
 
-    #       ### Windows
-    #       Simply download the Windows installer application and run it. It will walk you through installation, including installing the necessary dependencies.
-    #       Alternatively, you can download the zip file for a portable application; however, dependencies are not included with this option.
+          ### Windows
+          Simply download the Windows installer application and run it. It will walk you through installation, including installing the necessary dependencies.
+          Alternatively, you can download the zip file for a portable application; however, dependencies are not included with this option.
 
-    #       Because our application contacts GitHub's servers to check for new releases on launch, it is possible it will get flagged by firewall software &ndash; please allow it through so it can function correctly.
+          Because our application contacts GitHub's servers to check for new releases on launch, it is possible it will get flagged by firewall software &ndash; please allow it through so it can function correctly.
 
-    #       ### macOS
-    #       Pick the macOS pkg installer that fits your computer's architecture. Before executing it, you will need to open the Terminal application and run `xattr -cr /User/yourusernamehere/Downloads/pkginstallernamehere.pkg`,
-    #       replacing "yourusernamehere" with your username and "pkginstallernamehere.pkg" with the appropriate pkg installer filename. Running this command makes it so that the pkg installer is runnable even though we don't codesign it.
+          ### macOS
+          Pick the macOS pkg installer that fits your computer's architecture. Before executing it, you will need to open the Terminal application and run `xattr -cr /User/yourusernamehere/Downloads/pkginstallernamehere.pkg`,
+          replacing "yourusernamehere" with your username and "pkginstallernamehere.pkg" with the appropriate pkg installer filename. Running this command makes it so that the pkg installer is runnable even though we don't codesign it.
 
-    #       The pkg installer will guide you through installing Serial Loops and will automatically install the dependencies devkitARM and make if necessary.
+          The pkg installer will guide you through installing Serial Loops and will automatically install the dependencies devkitARM and make if necessary.
 
-    #       #### Which macOS pkg installer should I choose?
-    #       If your Mac is newer, you will probably want the ARM installer. If it is older, you may want the x64 one. If unsure, download the ARM one first and attempt to run it &ndash; it will throw an error saying it can't be run on this computer if your computer is not able to run it. If that's the case, download the x64 one instead.
+          #### Which macOS pkg installer should I choose?
+          If your Mac is newer, you will probably want the ARM installer. If it is older, you may want the x64 one. If unsure, download the ARM one first and attempt to run it &ndash; it will throw an error saying it can't be run on this computer if your computer is not able to run it. If that's the case, download the x64 one instead.
 
-    #       ### Linux
-    #       We recommend using the provided flatpak as it is the easiest to use. First, install flatpak if you haven't already. Then, download the flatpak and double click it or run `flatpak install` on it from the terminal. It will then install itself,
-    #       bringing all the necessary dependencies with it.
+          ### Linux
+          We recommend using the provided flatpak as it is the easiest to use. First, install flatpak if you haven't already. Then, download the flatpak and double click it or run `flatpak install` on it from the terminal. It will then install itself,
+          bringing all the necessary dependencies with it.
 
-    #       If you would rather manually install, follow the below instructions:
-    #       * The `.deb` package is intended for Debian-based distros (e.g. Ubuntu). Install it with `sudo apt install -f ./SerialLoops-$(Version)_amd64.deb`.
-    #       * The `.rpm` package is intended for Red Hat distros (e.g. Fedora). Install it with `sudo dnf install ./SerialLoops-$(Version)-1.fc39.x86_64.rpm`.
-    #       * For other Linux distros, please use the binaries packaged in the `.tar.gz` archive; when doing so, ensure you install the OpenAL binaries so audio playback works.
-    #     ${{ if eq(parameters['version'], '') }}:
-    #       isPreRelease: true
-    #     ${{ if ne(parameters['version'], '') }}:
-    #       isPreRelease: false
+          If you would rather manually install, follow the below instructions:
+          * The `.deb` package is intended for Debian-based distros (e.g. Ubuntu). Install it with `sudo apt install -f ./SerialLoops-$(Version)_amd64.deb`.
+          * The `.rpm` package is intended for Red Hat distros (e.g. Fedora). Install it with `sudo dnf install ./SerialLoops-$(Version)-1.fc39.x86_64.rpm`.
+          * For other Linux distros, please use the binaries packaged in the `.tar.gz` archive; when doing so, ensure you install the OpenAL binaries so audio playback works.
+        ${{ if eq(parameters['version'], '') }}:
+          isPreRelease: true
+        ${{ if ne(parameters['version'], '') }}:
+          isPreRelease: false
