--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -123,7 +123,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-x64-rpm
-          path: install/linux/rpm/rpmbuild/RPMS/x86_64/SerialLoops-$(Version)-1.fc39.x86_64.rpm
+          path: install/linux/rpm/rpmbuild/RPMS/x86_64/SerialLoops-$SLVersion-1.fc39.x86_64.rpm
           retention-days: 1
 
   macos-pkg:
