--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -57,6 +57,8 @@ jobs:
         with:
           name: nuget-sources
           path: install/linux/flatpak/
+      - name: Export version
+        run: echo $SLVersion > install/linux/flatpak/VERSION
       - name: Build flatpak
         uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
