--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -69,7 +69,7 @@ modules:
       - type: file
         path: club.haroohie.SerialLoops.desktop
       - type: file
-        path: ../../src/SerialLoops/Assets/Icons/AppIcon.svg
+        path: ../../../src/SerialLoops/Assets/Icons/AppIcon.svg
       - type: file
         path: VERSION
     build-commands:
