Modify the .desktop in the deb package again

--- a/install/linux/dpkg-build/SerialLoops/usr/share/applications/SerialLoops.desktop
+++ b/install/linux/dpkg-build/SerialLoops/usr/share/applications/SerialLoops.desktop
@@ -3,7 +3,7 @@ Version=#VERSION#
 Name=Serial Loops
 Comment=Editor for Suzumiya Haruhi no Chokuretsu
 Exec=/usr/bin/SerialLoops
-Icon=SerialLoops.png
+Icon=/usr/lib/SerialLoops/SerialLoops.png
 Terminal=false
 Type=Application
 Categories=Utility;Application
