--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -16,6 +16,7 @@ finish-args:
   - --socket=x11
   - --share=ipc
   - --share=network
+  - --socket=pulseaudio
   - --filesystem=~/SerialLoops:create
   - --filesystem=xdg-config:create
   - --env=DOTNET_ROOT=/app/lib/dotnet
