Add patches for flatpak

--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -64,6 +64,8 @@ modules:
         url: https://github.com/haroohie-club/SerialLoops.git
         branch: AvaloniaInstallations
       - ./nuget-sources.json
+      - type: patch
+        path: patches/sandbox.patch
       - type: file
         path: club.haroohie.SerialLoops.metainfo.xml
       - type: file
