Add explicit reference for some reason

--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -135,4 +135,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Avalonia.Controls.ColorPicker">
+      <HintPath>..\..\..\..\..\.nuget\packages\avalonia.controls.colorpicker\11.2.0\lib\net8.0\Avalonia.Controls.ColorPicker.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
